fixed singlerecipepage responsiveness on mobile

--- a/src/Cook/css/SingleRecipePage.css
+++ b/src/Cook/css/SingleRecipePage.css
@@ -1,19 +1,22 @@
-.card-img-overlay{
+.singleRecipeBase .card-img-overlay{
     text-align: center;
     background-color: rgba(255, 255, 255, 0.692);
     height: fit-content;
     color: black;
+    padding-top: 0.75rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom:0.5rem;
 
 
-    
 }
 
-.card-img-overlay h1{
+.singleRecipeBase .card-img-overlay h1{
     font-weight: bolder;
     font-size:calc(1em + 0.55vmax );
 }
 
-.card-img-overlay h4{
+.singleRecipeBase .card-img-overlay h4{
     font-size:calc(0.50em + 0.55vmax);
 }
 
@@ -25,12 +28,18 @@
     
 }
 
-.card .card-img{
+.singleRecipeBase .card .card-img{
+    /* display: block; */
+    color:white;
     width:100%;
     height:65vh;
+    /* max-height:calc(30em + 2vmin);
+    max-width: 1000px;
+    max-height: 600px;
+    transform: translateX(calc(50vw - 500px)); */
 }
 
-.prepBorder{
+.singleRecipeBase .prepBorder{
     border-width: 1px 0px 0px 0px;
     border-style: solid;
     border-color: #d6d6d6;
@@ -39,28 +48,31 @@
 
 
 
-.singleRecipeSub h1{
+.singleRecipeBase .singleRecipeSub h1{
     font-size:calc(1em + 0.75vmax );
     text-decoration: underline;
 }
 
-.singleRecipeSub li{
+.singleRecipeBase .singleRecipeSub li{
     font-size:calc(0.6em + 0.55vmax );
 }
 
-.prepBorder li::marker{
+.singleRecipeBase .prepBorder li::marker{
     font-size:calc(0.85em + 0.75vmax );
     font-weight: bold;
 }
 
-.prepBorder{
+.singleRecipeBase .prepBorder{
     padding-top: 1%;
 }
 
 
-@media (max-width: 900px ), (max-height:600px) {
-    .card .card-img {
+@media only screen and (max-width: 1500px){
+    .singleRecipeBase .card .card-img {
       width:auto;
       height:auto;
+      max-height: 30vh;
+      /* max-width: none;
+      transform: translateX(0); */
     }
 }
